---------------------------------------------------------------------------
Version 3.22.1 [v3-stable] (rgerhards), 2009-04-??
- bugfix: internal messages were emitted to whatever file had fd2 when
  rsyslogd ran in forked mode (as usual!)
  Thanks to varmojfekoj for the patch
- small enhancement: config validation run now exits with code 1 if an
  error is detected. This change is considered important but small enough
  to apply it directly to the stable version. [But it is a border case,
  the change requires more code than I had hoped. Thus I have NOT tried
  to actually catch all cases, this is left for the current devel
  releases, if necessary]
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
- bugfix: potential segfault issue when multiple $UDPServerRun directives
  are specified. Thanks to Michael Biebl for helping to debug this one.
- relaxed GnuTLS version requirement to 1.4.0 after confirmation from the
  field that this version is sufficient
- bugfix: parser did not properly handle empty structured data
---------------------------------------------------------------------------
Version 3.22.0 [v3-stable] (rgerhards), 2009-04-21
This is the first stable release that includes the full functionality
of the 3.21.x version tree.
- bugfix: $InputTCPMaxSessions config directive was accepted, but not
  honored. This resulted in a fixed upper limit of 200 connections.
- bugfix: the default for $DirCreateMode was 0644, and as such wrong.
  It has now been changed to 0700. For some background, please see
  http://lists.adiscon.net/pipermail/rsyslog/2009-April/001986.html
- bugfix: ompgsql did not detect problems in sql command execution
  this could cause loss of messages. The handling was correct if the
  connection broke, but not if there was a problem with statement
  execution. The most probable case for such a case would be invalid